--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">Projects</a></li>
-                <li><a href="#">API</a></li>
+                <li><a href="api/randomcards.html">API</a></li>
             </ul>
         </nav>
         <div class="header-text">
