--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OutroNinja - Portfolio</title>
+    <link rel="icon" type="images/icon" href="images/icon.png">
     <link rel="stylesheet" href="style.css">
     <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;subset=latin" rel="stylesheet">
     <script src="https://kit.fontawesome.com/4dce76111d.js" crossorigin="anonymous"></script>
@@ -18,7 +19,7 @@
             <ul>
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">Projects</a></li>
-                <li><a href="api/randomcards.html">API</a></li>
+                <li><a href="api/randomcard.html">API</a></li>
             </ul>
         </nav>
         <div class="header-text">
