--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">Projects</a></li>
-                <li><a href="api/randomcard.html">API</a></li>
+                <li><a href="https://outroninja.repl.co/api/randomcard">API</a></li>
             </ul>
         </nav>
         <div class="header-text">
