--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Título do link personalizado">
+    <meta property="og:description" content="Descrição do link personalizado">
+    <meta property="og:image" content="URL da imagem para o link personalizado">
+    <meta name="twitter:card" content="Tipo do cartão (summary, summary_large_image, player)">
+    <meta name="twitter:title" content="Título do link personalizado">
+    <meta name="twitter:description" content="Descrição do link personalizado">
+    <meta name="twitter:image" content="URL da imagem para o link personalizado">
     <title>OutroNinja - Portfolio</title>
     <link rel="icon" type="images/icon" href="images/icon.png">
     <link rel="stylesheet" href="style.css">
