--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Título do link personalizado">
-    <meta property="og:description" content="Descrição do link personalizado">
-    <meta property="og:image" content="URL da imagem para o link personalizado">
-    <meta name="twitter:card" content="Tipo do cartão (summary, summary_large_image, player)">
-    <meta name="twitter:title" content="Título do link personalizado">
-    <meta name="twitter:description" content="Descrição do link personalizado">
-    <meta name="twitter:image" content="URL da imagem para o link personalizado">
+    <meta name="author" content="OutroNinja - Portfolio">
+    <meta name="keywords" content="NINJA, OutroNinja, developer, designer, discord, bot">
+    <meta property="og:title" content="OutroNinja - Home">
+    <meta property="og:description" content="Developer, player, student and adorable. View my projects and contact me!">
+    <meta property="og:image" content="https://i.pinimg.com/736x/3b/25/43/3b254397882cd7fca0317ffbbb66d456.jpg">
     <title>OutroNinja - Portfolio</title>
     <link rel="icon" type="images/icon" href="images/icon.png">
     <link rel="stylesheet" href="style.css">
@@ -47,28 +45,28 @@
                         <h1 class="sub-title">My Projects</h1>
                         <div class="services-list">
                             <div>
-                                <i class="fa-solid fa-question"></i>
-                                <h2>No Project :(</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus mauris turpis, pulvinar ut facilisis porttitor, sollicitudin in augue.</p>
-                                <a href="#">Acess</a>
+                                <i class="fa-solid fa-vial"></i>
+                                <h2>Card API</h2>
+                                <p>A simple api that generates card images for you! Simple to use and understand, you can specify which type of card you want!</p>
+                                <a href="https://outroninja.repl.co/api/randomcard">Click to View</a>
                             </div>
                             <div>
                                 <i class="fa-solid fa-question"></i>
                                 <h2>No Project :(</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus mauris turpis, pulvinar ut facilisis porttitor, sollicitudin in augue.</p>
-                                <a href="#">Acess</a>
+                                <a href="#">Click to View</a>
                             </div>
                             <div>
                                 <i class="fa-solid fa-question"></i>
                                 <h2>No Project :(</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus mauris turpis, pulvinar ut facilisis porttitor, sollicitudin in augue..</p>
-                                <a href="#">Acess</a>
+                                <a href="#">Click to View</a>
                             </div>
                             <div>
                                 <i class="fa-solid fa-question"></i>
                                 <h2>No Project :(</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus mauris turpis, pulvinar ut facilisis porttitor, sollicitudin in augue.</p>
-                                <a href="#">Acess</a>
+                                <a href="#">Click to View</a>
                             </div>
                         </div>
                     </div>
