--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="images/1.png">
+                <img src="images/user.png">
             </div>
             <div class="about-col-2">
                 <div id="services">
