--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
                         <h1 class="sub-title">My Projects</h1>
                         <div class="services-list">
                             <div>
-                                <i class="fa-solid fa-vial"></i>
-                                <h2>Card API</h2>
-                                <p>A simple api that generates card images for you! Simple to use and understand, you can specify which type of card you want!</p>
+                                <i class="fa-solid fa-folder-open"></i>
+                                <h2>APIs</h2>
+                                <p>I make some apis in my spare time (the apis are released to the public and can be found by accessing the documentation)!</p>
                                 <a href="https://outroninja.repl.co/api/randomcard">Click to View</a>
                             </div>
                             <div>
-                                <i class="fa-solid fa-question"></i>
-                                <h2>No Project :(</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus mauris turpis, pulvinar ut facilisis porttitor, sollicitudin in augue.</p>
+                                <i class="fa-solid fa-file-pen"></i>
+                                <h2>Website Design</h2>
+                                <p>I design websites, currently my only project is this portfolio!</p>
                                 <a href="#">Click to View</a>
                             </div>
                             <div>
                                 <i class="fa-solid fa-question"></i>
-                                <h2>No Project :(</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus mauris turpis, pulvinar ut facilisis porttitor, sollicitudin in augue..</p>
+                                <h2>???</h2>
+                                <p>This space is reserved for a big future project and we can't reveal it yet!</p>
                                 <a href="#">Click to View</a>
                             </div>
                             <div>
                                 <i class="fa-solid fa-question"></i>
-                                <h2>No Project :(</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus mauris turpis, pulvinar ut facilisis porttitor, sollicitudin in augue.</p>
+                                <h2>???</h2>
+                                <p>This space is reserved for a big future project and we can't reveal it yet!</p>
                                 <a href="#">Click to View</a>
                             </div>
                         </div>
@@ -81,6 +81,8 @@
 
     var tablinks = document.getElementsByClassName("tab-links");
     var tabcontents = document.getElementsByClassName("tab-contents");
+    console.log(parseFloat(website))
+    
 
     function opentab(tabname){
         for(tablink of tablinks){
