--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul>
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">Projects</a></li>
-                <li><a href="https://outroninja.repl.co/api/randomcard">API</a></li>
+                <li><a href="https://outroninja.gitbook.io/apidocs/">API</a></li>
             </ul>
         </nav>
         <div class="header-text">
